--- a/1.html
+++ b/1.html
@@ -46,8 +46,8 @@ style="margin-top: 45px;">
 미안하지만, 이젠 정리하기가 귀찮다...자식-부모태그를 배우고 있는데 'li'가 있으면 그걸 구분짓는 'ul'이 있다 정도만 알도록 하자
 'tab'을 사용하여 뒤로 밀어넣으면 되고.. 뭐 아무튼 알아서 하라.<br>
 'ol'을 사용하는 방법을 알게 되었다! 'ul'과는 다른 굉장한 방법이다!! 알아서 넘버링을 해준다는 특성을 지닌다.<br>
-개웃긴사실은 '지금 까지 만들었던 모든 제목들은 참으로 부끄러운 것이다.'라는 사실이다 ㅋㅋ<br>
-'meta charset="utf-8"'이라는 코드를 사용해서- 혹시나 한글이 깨진다면 - 문제를 해결할 수 있다. / 다행이 내가 실력이 빻아서 저런 코도를 사용할 필요가 없다는 것이 아니라, VS에서는 잘 지원해준다고 한다..<br>
+매우웃긴사실은 '지금 까지 만들었던 모든 제목들은 참으로 부끄러운 것이다.'라는 사실이다 ㅋㅋ<br>
+'meta charset="utf-8"'이라는 코드를 사용해서- 혹시나 한글이 깨진다면 - 문제를 해결할 수 있다. / 다행히 내가 실력이 빻아서 저런 코도를 사용할 필요가 없다는 것이 아니라, VS에서는 잘 지원해준다고 한다..<br>
 내용과 제목을 정확히 구분해줘야할 필요가 있다고 한다. 사람의 약속이니 지킬것들은 지키자..<br>
 'body'를 사용하여 내용을 정확히 구분해주고, 'title'과 'meta charset...blabla'라는 것을 'head'사용하여 내용에 대한 설명 및 제목을 설명하는 것이다.<br>
 'html','head''body'라는 태그들이 존재한다... 이 태그들에게도 위계질서가 있었던 것이다~!! CEO가 되는 격의 HTML, 그리고 나머지 이사장?느낌의 body, head이다.<br>
